Refactored main to work with APIs instead of models directly.

--- a/.gitignore
+++ b/.gitignore
@@ -70,13 +70,14 @@ celerybeat-schedule
 
 # Environments
 .env
-.venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
 .vscode
+.*venv
+.venv
 
 # Spyder project settings
 .spyderproject
