--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-seamless_communication/
 librosa==0.10.1
 openai==0.28.0
-openai-whisper==20230918
-torch==2.0.1
-torchaudio==2.0.2
 python-dotenv
+gradio_client
