--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-seamless_communication/
+git+https://github.com/facebookresearch/seamless_communication
 librosa==0.10.1
 openai==0.28.0
 openai-whisper==20230918
