--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 git+https://github.com/facebookresearch/seamless_communication
+gradio_client
 openai==0.28.0
 openai-whisper==20230918
+python-dotenv
+streamlit==1.27.0
 torch==2.0.1
 torchaudio==2.0.2
-python-dotenv
-gradio_client
