--- a/.gitignore
+++ b/.gitignore
@@ -97,10 +97,13 @@ dmypy.json
 # Pyre type checker
 .pyre/
 git
-# Ignore images and audio
+# Ignore video and audio
 *.wav
 *.m4a
 *.mp3
+*.mp4
+*.mkv
+*.webm
 
 # ignore tts model
 /fra
