--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ torchaudio==2.0.2
 pydub==0.25.1
 python-dotenv==1.0.0
 gradio_client===0.5.1
-TTS==0.14.3
+#TTS==0.14.3
+transformers==4.34.0
+accelerate==0.23.0
 streamlit
